--- a/assets/style.css
+++ b/assets/style.css
@@ -9,13 +9,15 @@
     font-family: 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-header, nav, ul, a {
+/* header */
+
+header, nav, ul, li, a {
     background-color: #31343D;
 }
 
 header{
     padding: 20px;
-    position: relative;
+    padding: 15px 15px 15px 0px;
 }
 
 
@@ -24,6 +26,7 @@ h1{
     font-size: 48px;
     background-color: var(--box-in-box);
     display:inline-block;
+    padding: 0px 0px 0px 70px;
 }
 nav{
     float: right;
@@ -37,21 +40,76 @@ nav ul{
 
 nav ul li{
     display: inline;
+    padding: 3px;
 }
 
 a{
     color: var(--box-in-box);
-    text-decoration: underline;
-    background-color: ;
+    text-decoration: none;
+    font-size: 20px;
+    border-bottom: 4px solid;
+    padding-bottom: 5px;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 }
 
-
+/* background ima */
 
 .cool-subtitle-here{
-    height: 800px;
+    height: 300px;
     width: 100%;
     margin-bottom: 25px;
     background-image: url(./img/cool.jpg);
     background-size: cover;
     background-position: center;
+    position: relative;
 }
+
+.cool-subtitle-here::after{
+    content: "Hello world!!";
+    background-color: var(--box-in-box);
+    font-size: 35px;
+    padding: 7px;
+    position: absolute;
+    right:4rem;
+    bottom:2rem;
+}
+
+main{
+    padding: 10px 20px 10px 20px;
+}
+
+h2{
+    color: #445876;
+    color: #445876;
+    font-size: 35px;
+    padding: 10px;
+    border-right: #445876 solid 5px;
+    display: inline-block;
+    position: relative;
+}
+
+p{
+    display: inline;
+    padding: 0px;
+    position: absolute;
+    padding: 0 0 0 20px;
+}
+
+.About-ME h2{
+    width: 20%;
+}
+
+.About-ME p{
+    width: 80%;
+}
+
+
+
+
+/* .About-Me::before{
+    content: "About Me";
+    color: #445876;
+    font-size: 35px;
+    padding: 7px;
+} */
