--- a/assets/style.css
+++ b/assets/style.css
@@ -11,27 +11,35 @@
 
 /* header */
 
+header{
+    padding: 15px 0px 15px 0px;
+    flex-direction: row;
+    display: flex;
+    justify-content: flex-start;
+    height: auto;
+    position: relative;
+    width: 100%;
+}
+
 header, header nav, header ul, header li, header a {
     background-color: #31343D;
 }
-
-header{
-    padding: 20px;
-    padding: 15px 15px 15px 0px;
-}
-
 
 h1{
     color: #31343D;
     font-size: 48px;
     background-color: var(--box-in-box);
-    display:inline-block;
-    padding: 0px 0px 0px 70px;
+    display:flex;
+    padding: 0 0 0 4%;
+    justify-content: flex-end;
+    width: 30%;
 }
 header nav{
-    float: right;
     padding-top: 15px;
     padding-right: 20px;
+    display: flex;
+    width: 69%;
+    justify-content: flex-end;
 }
 
 nav ul{
@@ -76,7 +84,16 @@ header nav ul li a{
     bottom:2rem;
 }
 
-/* main */
+/* main container*/
+
+.container{
+    display: flex;
+    flex-direction: column; 
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+/* main section */
 
 .About-Me {
     margin-bottom:30px;
@@ -86,20 +103,20 @@ header nav ul li a{
     justify-content: flex-start;
     height: auto;
     position: relative;
+    width: 100%;
 } 
 
  h2{
     color: #445876;
     font-size: 35px;
-    padding:0 5px 0 100px;
+    padding:0 5% 0 5%;
     width: 20%;
     height:100%;
-    
 }
 
 p{
-    padding: 0 0 0 30px;
-    width: 70%;
+    padding: 0 0 0 5%;
+    width: 75%;
     border-left: #445876 solid 5px;
 
 } 
@@ -113,6 +130,7 @@ p{
     height: auto;
     position: relative;
     margin-bottom: 30px ;
+    width: 100%;
 }
 
 .link-container{
@@ -120,41 +138,45 @@ p{
     flex-direction: row;
     justify-content:flex-start;
     flex-wrap: wrap;
-    width: 70%;
+    width: 75%;
+    padding: 0 0 0 5%;
     height: auto;
-    padding: 0 0 0 35px;
+    margin-bottom: 30px;
+    
     border-left: #445876 solid 5px;
 }
 
 .Surf-Report{
     background-image: url(./img/mern.jpg);
-    width: 99%;
+    width: 100%;
     height: 300px;
     margin-bottom:15px;
 }
 
+/* should define margin light left 1% each, then surf report widh 100% */
 .LED-WALL {
     background-image: url(./img/mern.jpg);
-    width: 49.0%;
+    width: 49%;
     height: 150px;
     /* border: solid red 3px; */
     margin-bottom: 15px;
-    margin-right: 6.0px;
+    margin-right: 1%;
 }
 
 .Calculator{
     background-image: url(./img/mern.jpg);
-    width: 49.0%;
+    width: 49%;
     height: 150px;
     margin-bottom: 15px;
-    margin-left: 6.0px;
+    margin-left: 1%;
 }
 
 .Pastel-Puzzle{
     background-image: url(./img/mern.jpg);
     width: 49.0%;
     height: 150px;
-    margin-right: 6.0px;
+    margin-bottom: 15px;
+    margin-right: 1%;
 }
 
 .Run-Buddy{
@@ -162,7 +184,7 @@ p{
     width: 49.0%;
     height: 150px;
     margin-bottom: 15px;
-    margin-left: 6.0px;
+    margin-left: 1%;
 }
 
 /* contact-me */
@@ -175,18 +197,20 @@ p{
     flex-wrap: wrap;
     height: auto;
     position: relative;
-    
+    width: 100%;
 }
 
 .Contact-Me nav{
     border-left: #445876 solid 5px;
-    width: 70%;
+    width: 75%;
+    padding: 0 0 0 5%;
 }
 .Contact-Me ul{
     justify-content:space-around; 
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+    margin: 15px 0px;
 }
 
 .Contact-Me a{
