--- a/assets/style.css
+++ b/assets/style.css
@@ -27,6 +27,7 @@ header, header nav, header ul, header li, header a {
 }
 
 h1{
+    align-items: center;
     color: var(--header-main);
     font-size: 300%;
     background-color: var(--box-in-box);
@@ -76,8 +77,15 @@ header nav ul li a{
     position: relative;
 }
 
+.hiro{
+    position: absolute;
+    z-index: 100;
+    height:150px;
+    left: 4rem;
+}
+
 .cool-subtitle-here::after{
-    content: "Hello world!!";
+    content: "Web Developer";
     background-color: var(--box-in-box);
     font-size: 35px;
     padding: 7px;
@@ -96,6 +104,14 @@ header nav ul li a{
     padding-bottom: 20px;
 }
 
+h2{
+    color: var(--h2-border);
+    font-size: 200%;
+    padding:0 5% 0 5%;
+    width: 20%;
+    height:100%;
+}
+
 /* main section */
 
 .About-Me {
@@ -109,19 +125,13 @@ header nav ul li a{
     width: 100%;
 } 
 
- h2{
-    color: var(--h2-border);
-    font-size: 200%;
-    padding:0 5% 0 5%;
-    width: 20%;
-    height:100%;
-}
+
 
 p{
-    padding: 0 0 0 5%;
+
+    padding: 0 0 1% 5%;
     width: 75%;
     border-left: #445876 solid 5px;
-
 } 
 /* work */
 .Work   {
@@ -257,23 +267,8 @@ p{
     bottom:10%;
 }
 
-.Surf-Report:hover{
-    opacity: 1;
-}
-
-.LED-WALL:hover{
-    opacity: 1;
-}
-
-.Calculator:hover{
-    opacity: 1;
-}
-
-.Pastel-Puzzle:hover{
-    opacity: 1;
-}
-
-.Run-Buddy:hover{
+.Surf-Report:hover, .LED-WALL:hover, 
+.Calculator:hover, .Pastel-Puzzle:hover, .Run-Buddy:hover{
     opacity: 1;
 }
 
